Not Released
======================================================================

Summary:
1. General
	- Project file layout changed to accomodate extensions
2. Library
	- Support for Intel(R) Xeon(R) processor E5 v4 support
	- DSO built by default
	- examples moved to the top folder
	- Perl interface created for the library
3. PQoS Utility
	- pqos directory created to accomodate the utility files
	- link against DSO
4. Examples
	- copied examples previously located in library directory
	- Perl hello world script created

======================================================================
Release  v0.1.4  2016-02-04
======================================================================

Contributors (alphabetical order):
	Aaron Hetherington <aaron.hetherington@intel.com>
	Colin Ian King <colin.king@canonical.com>
	Colm Moore <colm.moore@intel.com>
	Jacek Turek <jacekx.turek@intel.com>
	James Hunt <james.o.hunt@intel.com>
	Marcel Cornu <marcel.d.cornu@intel.com>
	Priya Autee <priya.v.autee@intel.com>
	Tomasz Kantecki <tomasz.kantecki@intel.com>

Summary:
1. Hardware support
	Intel(R) Xeon(R) processor E3 v4 support (selected SKU's)
2. Monitoring
	- PID/TID monitoring through Linux perf
	- IPC (instructions per clock) performance event
	- LLC misses performance event
	- CSV output
	- Monitoring core groups
3. Allocation
	- CDP (code data prioritization) detection and management
4. General
	- man page
	- install and uninstall rules
	- cppcheck & coding style rules

======================================================================
Release  v0.1.3  2015-05-01
======================================================================

Contributors (alphabetical order):
	Pandi Maharajan <pandi.maharajan@intel.com>
	Priya Autee <priya.v.autee@intel.com>
	Rahul Shah <rahul.r.shah@intel.com>
	Tomasz Kantecki <tomasz.kantecki@intel.com>

Summary:
1. Hardware support
	Intel(R) Xeon(R) processor E5 v3 support (selected SKU's)
	Intel(R) Xeon(R) processor D support